--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "score_visualizer",
+  "name": "score_visualizer-old",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
